# Smart-Cube-Gaming-Controller-linux

./: .gitignore  README.md  binds.txt  main.py  pyproject.toml  required_python_modules.txt  requirements.txt
HTML-JS/: bluetooth.js  button.js  index.html  mode.js  style.css
binds/: binds.json  config.yml  full_huffman_mapping.txt  full_huffman_mapping_no_backspace.txt  minecraft.txt  temp.yaml
python_utils/: bind_reader.py  binds_mode.py  browser.py  console_mode.py  directinput.py  server.py
src/HTML-JS/: bluetooth.js  index.html  mode.js  style.css
src/SmartCubeGamingController/: __main__.py  app.py  main.py  server.py
src/SmartCubeGamingController/binds/: binds.py  moves.py  parsers.py
src/SmartCubeGamingController/modes/: __init__.py  directinput.py
src/SmartCubeGamingController/python_utils/: bind_reader.py  binds_mode.py  browser.py  console.py  directinput.py
src/SmartCubeGamingController/server/: browser.py  server.py
src/SmartCubeGamingController/tools/: huffman.py  main.py  unicode_frequency_analysis.py
src/data/: make_sample_text_minimal.py
src/data/character_usage_analysis/: character_usage_frequencies_full  character_usage_frequencies_full_backspace  temp
src/data/datasets/: sample_text.txt  sample_text_simplified.txt
src/data/mappings/: mapping_tiny.txt  temp.txt
tests/: test_app.py  test_binds.py  test_binds_parser.py  test_history.py  test_parser.py
tools/: huffman.py  unicode_frequency_analysis.py
tools/data/: README.md  character_usage_frequencies_5000_articles.json  character_usage_frequencies_tiny  sample_text.txt
(+5 files in other folders)
